force-app/main/default/objects/FluentMetric_Rate_Card__mdt/FluentMetric_Rate_Card__mdt.object-meta.xml
<CustomObject>
    <label>FluentMetric Rate Card</label>
    <pluralLabel>FluentMetric Rate Cards</pluralLabel>
</CustomObject>