force-app/main/default/objects/FluentMetric_Rate_Card__mdt/fields/Flex_Credits_Per_Call__c.field-meta.xml
<CustomField>
    <fullName>Flex_Credits_Per_Call__c</fullName>
    <description>DEPRECATED as of v1.5. Salesforce bills Flex Credits per tier-per-invocation, not per model. Pricing is now driven by Tier__c against FluentMetric_Cost_Settings__c.Tier_Basic_FC__c / Tier_Standard_FC__c / Tier_Advanced_FC__c. This field is retained as a nullable override escape hatch but is no longer consulted by the primary cost path.</description>
    <label>Flex Credits Per Call</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>