force-app/main/default/objects/FluentMetric_Rate_Card__mdt/fields/Is_Default_Fallback__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Fallback__c</fullName>
    <description>Exactly one record should have this true. CostCalculatorService uses the flagged record when no model match is found.</description>
    <defaultValue>false</defaultValue>
    <label>Is Default Fallback</label>
    <type>Checkbox</type>
</CustomField>