force-app/main/default/objects/FluentMetric_Rate_Card__mdt/fields/Is_Unmetered__c.field-meta.xml
<CustomField>
    <fullName>Is_Unmetered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, CostCalculatorService returns zero USD and zero Flex Credits for this model rather than billing per call. Use for Salesforce-internal classifiers (e.g. EinsteinHyperClassifier, EinsteinTextEval) that do not consume customer Flex Credits per the public rate card. Unmetered rows are also ineligible for use as the default fallback.</description>
    <inlineHelpText>Tick for models that do not consume Flex Credits (internal Salesforce classifiers, etc.). Cost calculations skip these rows entirely.</inlineHelpText>
    <label>Is Unmetered</label>
    <type>Checkbox</type>
</CustomField>