force-app/main/default/objects/FluentMetric_Rate_Card__mdt/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Matches GenAIGatewayRequest__dlm.model__c. Use model family prefix (e.g. 'gpt-4o') so version-suffixed requests (gpt-4o-2024-11-20) match via prefix lookup in CostCalculatorService.</description>
    <externalId>true</externalId>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>