force-app/main/default/objects/FluentMetric_Rate_Card__mdt/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Model provider name (e.g., OpenAI, Anthropic, Google, Salesforce).</description>
    <label>Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>