force-app/main/default/objects/FluentMetric_Rate_Card__mdt/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>Agentforce pricing tier — Basic, Standard, Advanced, or BYOLLM.</description>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>BYOLLM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>