force-app/main/default/objects/FluentMetric_Rate_Card__mdt/fields/USD_Per_Call__c.field-meta.xml
<CustomField>
    <fullName>USD_Per_Call__c</fullName>
    <description>DEPRECATED as of v1.5. USD is now derived as FC x Flex_Credit_USD_Rate__c (single source of truth), not from a per-model USD column. Salesforce bills per tier-per-invocation, so a per-model USD value is fabricated. Retained as nullable override escape hatch but not consulted by the primary cost path.</description>
    <label>USD Per Call</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>